--- a/dashboard/templates/index/signup.html
+++ b/dashboard/templates/index/signup.html
@@ -35,6 +35,7 @@
 {% include "index/messager.html" %}
 <main role="main" class="container mb-5">
     <h1 class="mt-lg-5 mt-md-3">Sign up uicCourse</h1>
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">Temporary not available</div>
     <form action="#" method="post" id="id_signup_form">
         {% csrf_token %}
         <div class="form-group">
