--- a/dashboard/templates/index/signup.html
+++ b/dashboard/templates/index/signup.html
@@ -1,3 +1,4 @@
+{% load widget_tweaks %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -25,7 +26,12 @@
 
         /* Custom page CSS
         -------------------------------------------------- */
-
+        .invalid-message{
+            width: 100%;
+            margin-top: .25rem;
+            font-size: 80%;
+            color: #dc3545;
+        }
     </style>
     {% load static %}
 </head>
@@ -35,144 +41,25 @@
 {% include "index/messager.html" %}
 <main role="main" class="container mb-5">
     <h1 class="mt-lg-5 mt-md-3">Sign up uicCourse</h1>
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">Temporary not available</div>
-    <form action="#" method="post" id="id_signup_form">
+    <form method="post">
         {% csrf_token %}
-        <div class="form-group">
-            <input type="email" class="form-control" placeholder="Email" name="email" id="id_email">
-            <label id="id_email_label"></label>
-        </div>
-        <div class="form-group">
-            <input type="text" class="form-control" placeholder="Username" name="username"
-                   id="id_username">
-            <label id="id_username_label"></label>
-        </div>
-        <div class="form-group">
-            <input type="password" class="form-control" placeholder="Password" name="password"
-                   id="id_password">
-            <label id="id_password_label"></label>
-        </div>
-        <div class="form-group">
-            <input type="text" class="form-control" placeholder="Invitation code" name="invitationcode"
-                   id="id_invitationcode">
-            <label id="id_invitationcode_label"></label>
-        </div>
-        <button type="submit" class="btn btn-success" id="submit_btn" disabled="disabled">Sign up
-        </button>
+        {% for field in form %}
+            <div class="form-group">
+            {{ field.label_tag }}
+            {% render_field field class+="form-control" %}
+            {% if field.help_text %}
+                <small class="form-text text-muted">{{ field.help_text|safe }}</small>
+            {% endif %}
+            {% for error in field.errors %}
+                <div class="invalid-message">
+                    {{ error }}
+                </div>
+            {% endfor %}
+            </div>
+        {% endfor %}
+        <button type="submit" class="btn btn-primary mb-5">Sign up</button>
     </form>
 </main>
 {% include "index/footer.html" %}
-<script>
-    function isEmail(email) {
-        var regex = /^[A-Za-z0-9\u4e00-\u9fa5]+@[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]+)+$/;
-        return regex.test(email);
-    }
-
-    function isPasswordValid(password) {
-        var regex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&])[A-Za-z\d$@$!%*?&]{8,}$/;
-        return regex.test(password)
-    }
-
-    $("#id_email").change(function () {
-        var email = $(this).val();
-
-        $.ajax({
-            url: '',
-            data: {
-                'email': email
-            },
-            dataType: 'json',
-            success: function (data) {
-                if (data.is_taken) {
-                    $("#id_email").removeClass('is-valid');
-                    $("#id_email").addClass('is-invalid');
-                    $("#id_email_label").html('<span class="text-danger">A user with this email already exists.</span>');
-                } else {
-                    if (isEmail($("#id_email").val())) {
-                        $("#id_email").removeClass('is-invalid');
-                        $("#id_email").addClass('is-valid');
-                        $("#id_email_label").html('<span class="text-success">This email is ready to go.</span>');
-                    } else {
-                        $("#id_email").removeClass('is-valid');
-                        $("#id_email").addClass('is-invalid');
-                        $("#id_email_label").html('<span class="text-danger">Wrong email format.</span>');
-                    }
-                }
-            }
-        });
-    });
-
-    $("#id_username").change(function () {
-        var username = $(this).val();
-
-        $.ajax({
-            url: '',
-            data: {
-                'username': username
-            },
-            dataType: 'json',
-            success: function (data) {
-                if (data.is_taken) {
-                    $("#id_username").removeClass('is-valid');
-                    $("#id_username").addClass('is-invalid');
-                    $("#id_username_label").html('<span class="text-danger">This username already exists.</span>');
-                } else {
-                    if ($("#id_username").val() != '') {
-                        $("#id_username").removeClass('is-invalid');
-                        $("#id_username").addClass('is-valid');
-                        $("#id_username_label").html('<span class="text-success">This username is ready to go.</span>');
-                    } else {
-                        $("#id_username").removeClass('is-valid');
-                        $("#id_username").addClass('is-invalid');
-                        $("#id_username_label").html('<span class="text-danger">Username cannot be empty.</span>');
-                    }
-                }
-            }
-        });
-    });
-
-    $("#id_invitationcode").change(function () {
-        var invitationcode = $(this).val();
-
-        $.ajax({
-            url: '',
-            data: {
-                'invitationcode': invitationcode
-            },
-            dataType: 'json',
-            success: function (data) {
-                if (data.is_valid) {
-                    $("#id_invitationcode").removeClass('is-invalid');
-                    $("#id_invitationcode").addClass('is-valid');
-                    $("#id_invitationcode_label").html('<span class="text-success">This Invitation Code is valid.</span>');
-                } else {
-                    $("#id_invitationcode").removeClass('is-valid');
-                    $("#id_invitationcode").addClass('is-invalid');
-                    $("#id_invitationcode_label").html('<span class="text-danger">This Invitation Code is invalid.</span>');
-                }
-            }
-        });
-    });
-    $("#id_password").change(function () {
-        if (isPasswordValid($("#id_password").val())) {
-            $("#id_password").removeClass('is-invalid');
-            $("#id_password").addClass('is-valid');
-            $("#id_password_label").html('<span class="text-success">The password is in the correct format.</span>');
-        } else {
-            $("#id_password").removeClass('is-valid');
-            $("#id_password").addClass('is-invalid');
-            $("#id_password_label").html('<span class="text-danger">Minimum eight characters, at least one uppercase letter, one lowercase letter, one number and one special character</span>');
-        }
-    });
-    $("#id_signup_form").change(function () {
-        setTimeout(function () {
-            if ($("#id_signup_form").html().indexOf("is-invalid") > 0) {
-                $("#submit_btn").attr("disabled", "disabled")
-            } else {
-                $("#submit_btn").removeAttr("disabled")
-            }
-        }, 100);
-    })
-</script>
 </body>
 </html>
